ROSAENG-65094 & ROSAENG-65095: Action result can now be stored in DB and retrieved through a new /api/v0/trusted-actions/runs/{exec-id}/output endpoint (#83)
